# polystar

./: CMakeLists.txt  README.md  conanfile.py  pyproject.toml  setup.py
.github/workflows/: main_push_pull_request.yml  package_deploy.yml  test_wheel_building.yml
cmake/: fetcher.cmake  polystar-conan.cmake  polystar-triangle.cmake
lib/svg/: svg.hpp
lib/tetgen/: tetgen.cxx
polystar/: __init__.py  bound.py  peaks.py  plotting.py  vis.py
src/: CMakeLists.txt  approx.hpp  array.hpp  array.tpp  array2.hpp  array2.tpp  array_.hpp  array_.tpp  array_functions.hpp  bitmap.cpp  bitmap.hpp  bitmap_path.cpp  debug.hpp  geometry.hpp  graph.hpp  hdf_interface.cpp  hdf_interface.hpp  polygon.hpp  polygon_clipping.cpp  polygon_clipping.hpp  polygon_network.hpp  polygon_network.tpp  polygon_poly.hpp  polygon_wire.hpp  polygon_wires.hpp  polyhedron.hpp  polyhedron_faces.hpp  polyhedron_flex.hpp  subscript.hpp  transform.hpp  triangle.hpp  utilities.hpp  utilities.tpp
src/tests/: CMakeLists.txt  polygon_test.cpp  test_array.cpp  test_linalg.cpp  test_polyhedron.cpp
wrap/: CMakeLists.txt  _bitmap.hpp  _network.cpp  _network.hpp  _polygon.cpp  _polygon.hpp  _polyhedron.cpp  _polyhedron.hpp  _polystar.cpp
wrap/tests/: test_polygon.py
